tdf#90956 - ComboBox: handle re-size calculation during dispose.

Change-Id: I3d6e421a10b0d6b0edb85c0a6454315198bfd22f